[package]
name = "plonky2_ecgfp5"
version = "0.2.0"
edition = "2021"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Sladuca/plonky2_ecgfp5"
categories = ["cryptography"]
description = "plonky2 gadgets for EcGFp5 curve and base field arithmetic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "ssh://git@github.com/okx/plonky2.git", rev= "26ec79e66349af5ab1234274f738c174048ddadd"}
plonky2_field = { git = "ssh://git@github.com/okx/plonky2.git", rev= "26ec79e66349af5ab1234274f738c174048ddadd"}
plonky2_ecdsa = { git = "https://github.com/okx/plonky2-ecdsa.git", rev ="fce37e89f93d51080dbdd395ee78b07121c0f75a" }
plonky2_u32 = { git = "https://github.com/okx/plonky2-u32.git", rev = "1a7d07115f6ba830994896194d775692e1589f49" }
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"
log = "0.4"
env_logger = "0.10"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "schnorr"
harness = false
