[package]
name = "plonky2_ecgfp5"
version = "0.2.0"
edition = "2021"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Sladuca/plonky2_ecgfp5"
categories = ["cryptography"]
description = "plonky2 gadgets for EcGFp5 curve and base field arithmetic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git = "ssh://git@github.com/okx/plonky2.git", rev= "b507df837a3fe657b18fb3bbf1c6c4635ec977ab"}
plonky2_field = { git = "ssh://git@github.com/okx/plonky2.git", rev= "b507df837a3fe657b18fb3bbf1c6c4635ec977ab"}
plonky2_ecdsa = { git = "https://github.com/okx/plonky2-ecdsa.git", rev ="b766455fae5a450615610f00ed32ddf643dd8d9e" }
plonky2_u32 = { git = "https://github.com/okx/plonky2-u32.git", rev = "aef22731c05622ce2303f940a7e393e6c3acf231" }
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"
log = "0.4"
env_logger = "0.10"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "schnorr"
harness = false
