[package]
name = "plonky2_ecgfp5"
version = "0.2.0"
edition = "2021"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Sladuca/plonky2_ecgfp5"
categories = ["cryptography"]
description = "plonky2 gadgets for EcGFp5 curve and base field arithmetic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { workspace = true }
plonky2_field = { workspace = true }
plonky2_ecdsa = { workspace = true }
plonky2_u32 = { workspace = true }
num = "0.4"
itertools = "0.10"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
hex = "0.4.3"

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.4"
log = "0.4"
env_logger = "0.10"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false

[[bench]]
name = "schnorr"
harness = false
